--- a/3.md
+++ b/3.md
@@ -100,7 +100,7 @@ If someone earning that average level of income were to donate 10%, she could *d
 
 Grace, 48, is a <a href="https://www.givedirectly.org/blog-post.html?id=7814451799017800737">typical recipient of donations from GiveDirectly</a>. She’s a widow who lives with four children:
 
-<img src="https://cdn.80000hours.org/wp-content/uploads/2015/12/Screen-Shot-2015-12-16-at-1.36.04-AM.png" alt="Screen Shot 2015-12-16 at 1.36.04 AM" class="alignright size-full wp-image-34910" /></p>
+<img src="https://cdn.80000hours.org/wp-content/uploads/2015/12/Screen-Shot-2015-12-16-at-1.36.04-AM.png" alt="Screen Shot 2015-12-16 at 1.36.04 AM" width="350" class="alignright size-full wp-image-34910" /></p>
 
 > I would like to use part of the money to build a new house since my house is in a very bad condition. Secondly, I would wish to pay fees for my son to go to a technical institute&#8230;.
 My proudest achievement is that I have managed to educate my son in secondary school.
