--- a/3.md
+++ b/3.md
@@ -102,9 +102,9 @@ Grace, 48, is a <a href="https://www.givedirectly.org/blog-post.html?id=78144517
 
 <img src="https://cdn.80000hours.org/wp-content/uploads/2015/12/Screen-Shot-2015-12-16-at-1.36.04-AM.png" alt="Screen Shot 2015-12-16 at 1.36.04 AM" width="350" class="alignright size-full wp-image-34910" /></p>
 
-> I would like to use part of the money to build a new house since my house is in a very bad condition. Secondly, I would wish to pay fees for my son to go to a technical institute&#8230;.
-My proudest achievement is that I have managed to educate my son in secondary school.
-My biggest hardship in life is [that I] lack a proper source of income.
+> I would like to use part of the money to build a new house since my house is in a very bad condition. Secondly, I would wish to pay fees for my son to go to a technical institute&#8230;.</p>
+My proudest achievement is that I have managed to educate my son in secondary school.</p>
+My biggest hardship in life is [that I] lack a proper source of income.</p>
 My current goals are to build and own a pit latrine and dig a borehole since getting water is a very big problem.
 
 GiveDirectly <a href="http://www.givewell.org/International/top-charities/give-directly#FindingsfromtheRCT">conducted a randomised controlled trial of their programme</a>, and found that recipients experienced significant reductions in hunger, stress and other bad outcomes for years after receiving the transfers. These results add to <a href="http://www.givewell.org/International/top-charities/give-directly#Generallyspeakingareunconditionalcashtransfersapromisingapproachtohelpingpeople">substantial existing literature</a> showing that cash transfers have significant benefits</a>.
