--- a/3.md
+++ b/3.md
@@ -169,7 +169,8 @@ It’s astonishing that we can do so much good while sacrificing so little. Why 
 Consider one of the most important graphs in economics, the graph of world income:
 
 <figure class="wp-caption">
-![World income distribution](https://cdn.80000hours.org/wp-content/uploads/2017/04/80K_articles_worldincome_V5-01.jpg)<figcaption>Source: PovcalNet and Milanović[^:`<p>For a detailed discussion of the origins and accuracy of this graph see our blog post <a href="https://80000hours.org/2017/04/how-accurately-does-anyone-know-the-global-distribution-of-income/">How accurately does anyone know the global distribution of income?</a></p>
+![World income distribution](https://cdn.80000hours.org/wp-content/uploads/2017/04/80K_articles_worldincome_V5-01.jpg)
+<figcaption>Source: PovcalNet and Milanović[^:`<p>For a detailed discussion of the origins and accuracy of this graph see our blog post <a href="https://80000hours.org/2017/04/how-accurately-does-anyone-know-the-global-distribution-of-income/">How accurately does anyone know the global distribution of income?</a></p>
 <p>Briefly, the data for percentiles 1 to 79 were taken from <a href="http://iresearch.worldbank.org/PovcalNet/home.aspx">PovcalNet</a>: the on-line tool for poverty measurement developed by the Development Research Group of the World Bank. Note that this is in fact a measure of <strong>consumption</strong>, which closely tracks income and is the standard way of tracking the wealth of people towards the lower part of the distribution. The data for income percentiles 80 to 99 were provided by <a href="https://en.wikipedia.org/wiki/Branko_Milanovi%C4%87">Branko Milanović</a> in private correspondence.`]</figcaption></figure>
 
 The x-axis shows the percentage of people in the world who earn each level of income (as indicated by the y-axis). Income has been adjusted to indicate how much that specific dollar amount will buy in a person’s home country (i.e. purchasing power parity). If the world were completely equal, the line would be horizontal.
