--- a/5.md
+++ b/5.md
@@ -290,3 +290,189 @@ The most recent of these advances are possible due to progress in a type of AI t
 
 !ytb-ePv0Fs9cGgU
 
+*Google DeepMind Plays Space Invaders at <a href="https://deepmind.com/blog/deep-reinforcement-learning/">a super-human level</a>*
+
+Due to this, many experts think human-level artificial intelligence could easily happen in our lifetimes. Here is a survey of 100 of the most cited AI scientists:[^:`<p>In 2014, Müller and Bostrom surveyed the top 100 most cited living AI scientists on the following question:</p>
+<blockquote><p>
+ For the purposes of this question, assume that human scientific activity continues without major negative disruption. By what year would you see a (10% / 50% / 90%) probability for HLMI to exist?
+</p></blockquote><p>
+Median responses were 2024, 2050, and 2070 respectively. </p>
+<p><a href="https://web.archive.org/web/20170306153824/https://philpapers.org/archive/MLLFPI.pdf">Archived link</a>, retrieved 6-March-2017.`]
+
+```
+<div id="tablepress-72-scroll-wrapper" class="tablepress-scroll-wrapper">
+        <table id="tablepress-72" class="tablepress tablepress-id-72">
+            <thead>
+                <tr class="row-1 odd">
+                    <th class="column-1">&nbsp;</th>
+                    <th class="column-2">Median response</th>
+                    <th class="column-3">Mean response</th>
+                    <th class="column-4">Standard deviation</th>
+                </tr>
+            </thead>
+            <tbody class="row-hover">
+                <tr class="row-2 even">
+                    <td class="column-1">10% chance of human-level machine intelligence</td>
+                    <td class="column-2">2024</td>
+                    <td class="column-3">2034</td>
+                    <td class="column-4">33 years</td>
+                </tr>
+                <tr class="row-3 odd">
+                    <td class="column-1">50% chance of human-level machine intelligence</td>
+                    <td class="column-2">2050</td>
+                    <td class="column-3">2072</td>
+                    <td class="column-4">110 years</td>
+                </tr>
+                <tr class="row-4 even">
+                    <td class="column-1">90% chance of human-level machine intelligence</td>
+                    <td class="column-2">2070</td>
+                    <td class="column-3">2168</td>
+                    <td class="column-4">342 years</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+```
+
+You can see the experts give a 50% chance of human-level AI happening by 2050, just 35 years in the future. Admittedly, they are very uncertain, but high uncertainty also means it could arrive *sooner* rather than later. You can read much more about when human-level AI might happen <a href="http://www.openphilanthropy.org/focus/global-catastrophic-risks/potential-risks-advanced-artificial-intelligence/ai-timelines">here</a>.
+
+Why is this important? Gorillas are faster than us, stronger than us, and have a more powerful bite. But there are only 100,000 gorillas in the wild, compared to seven billion humans, and their fate is up to us.[^:`<blockquote><p>
+ Over 100,000 western lowland gorillas are thought to exist in the wild, with 4,000 in zoos; eastern lowland gorillas have a population of under 5,000 in the wild and 24 in zoos. Mountain gorillas are the most severely endangered, with an estimated population of about 880 left in the wild and none in zoos.
+</p></blockquote>
+<p>
+<a href="http://web.archive.org/web/20170227210948/https://en.wikipedia.org/wiki/Gorilla">Archived link</a>, retrieved 27-Febuary-2017`] A major reason for this is a difference in intelligence.
+
+Right now, computers are only smarter than us in limited ways (e.g. playing chess), and this is already transforming the economy. The key moment, however, is when computers become smarter than us in most ways, like how we’re smarter than gorillas.
+
+This transition could be hugely positive, or hugely negative. On the one hand, just as the industrial revolution automated manual labour, the AI revolution could automate intellectual labour, unleashing unprecedented economic growth.
+
+But we also couldn’t guarantee staying in control of a system that’s smarter than us – it would be more strategic than us, more persuasive, and better at solving problems. What happens to humanity after its invention would be up to it. So we need to make sure the AI system shares our goals, and we only get one chance to get the transition right.
+
+This, however, is not easy. No-one knows how to code moral behaviour into a computer. Within computer science, this is known as the *alignment problem*.
+
+Solving the alignment problem might be one of the most important research questions in history, but today it’s mostly ignored.
+
+The number of full-time researchers at or beyond the postdoc level <a href="/problem-profiles/positively-shaping-artificial-intelligence/">working directly on the control problem </a> is under 30 (as of early 2018), making it some 100 times more neglected than biosecurity.
+
+At the same time, there is momentum behind this work. In the last five years, the field has gained academic and industry support,[^:`<p>The Puerto Rico conference in 2015 hosted by the Future of Life Institute was a watershed moment, leading to an open letter signed by many AI leaders within academia and industry. Here is an <a href="https://web.archive.org/web/20170311011724/https://futureoflife.org/ai-open-letter">archived copy of the letter</a>, retrieved 10 March 2017.`] such as a leading author of AI textbooks, Stuart Russell, and Stephen Hawking, as well as major funders, like the groundbreaking entrepreneur and billionaire Elon Musk. If you’re not a good fit for technical research yourself, you can contribute by working as a research manager or assistant, or donating and raising funds for this research.
+
+This will also be a huge issue for governments. AI policy is fast becoming an important area, but policy-makers are focused on short-term issues like how to regulate self-driving cars and job loss, rather than the key long-term issues (i.e. the future of civilisation).
+
+You can find out how to contribute in <a href="/problem-profiles/positively-shaping-artificial-intelligence/">our full profile</a>.
+
+Of all the issues we’ve covered so far, solving the alignment problem and managing the transition to powerful AI are among the most important, but also by far the most neglected. Despite also being harder to solve, we think they&#8217;re likely to be among the most high-impact problems of the next century.
+
+This was a surprise to us, but we think it’s where the arguments lead. These days we spend more time researching machine learning than malaria nets.
+
+Read more about why we think <a href="https://80000hours.org/articles/extinction-risk/">reducing extinction risks should be humanity’s key priority</a>.
+
+## Dealing with uncertainty, and “going meta”
+
+Our views have changed a great deal over the last eight years, and they could easily change again. We could commit to working on AI or biosecurity, but we might discover something even better in the coming years. Might there be problems that will definitely be important in the future, despite all our uncertainty?
+
+Eventually, we decided to work on career choice, which is why we’re writing this article. In this section, we’ll explain why, and suggest other problems that are more attractive the more you’re uncertain. We think these are potentially competitive with AI and biosecurity, and where to focus mainly comes down to personal fit.
+
+### Global priorities research
+
+If you’re uncertain which global problem is most pressing, here’s one answer: “more research is needed”. Each year governments spent over $500 billion trying to make the world a better place, but only a tiny fraction goes towards research to identify how to spend those resources most effectively – what we call “global priorities research”.
+
+As we’ve seen, some approaches are far more effective than others. So this research is hugely valuable.
+
+A career in this area could mean working at the Open Philanthropy Project, Future of Humanity Institute, economics academia, think tanks, and elsewhere. Read more about how to contribute in the <a href="/problem-profiles/global-priorities-research/">full profile</a>.
+
+### Broad interventions, such as improved politics
+
+The second strategy is to work on problems that will help us solve lots of other problems. We call these “broad interventions”.
+
+For instance, if we had a more enlightened government, that would help us solve lots of other problems facing future generations. The US government in particular will play a pivotal role in issues like climate policy, AI policy, biosecurity, and new challenges we don’t even know about yet. So US governance is highly important (if maybe not neglected or tractable).
+
+This consideration brings us full circle. Earlier, we argued that rich country issues like education were less urgent than helping the global poor. However, now we can see that from the perspective of future generations, *some* rich country issues might be more important, due to their long-term effects.
+
+For instance, a more educated population might lead to better governance; or political action in your local community might have an effect on decision-makers in Washington. We did an analysis of the simplest kind of political action – voting – and <a href="/2016/11/why-the-hour-you-spend-voting-is-the-most-socially-impactful-of-all/">found that it could be really valuable</a>.
+
+On the other hand, issues like US education and governance already receive a huge amount of attention, which makes them hard to improve. Read more about <a href="/2017/01/5-reasons-not-to-go-into-education/">the case against working on US education</a>.
+
+We favour more neglected issues with more targeted effects on future generations. For instance, fascinating new research by Philip Tetlock shows that <a href="https://www.amazon.com/Superforecasting-Science-Prediction-Philip-Tetlock/dp/0804136718">some teams and methods are far better at predicting geopolitical events than others</a>. If the decision-makers in society were informed by much more accurate predictions, it would help them navigate future crises, whatever those turn out to be.
+
+However, the category of “broad interventions” is one of the areas we’re most uncertain about, so we’re keen to see more research.
+
+### Capacity building and promoting effective altruism
+
+If you’re uncertain which problems will be most pressing in the future, a third strategy is to simply save money or invest in your <a href="/career-guide/career-capital/">career capital</a>, so you’re in a better position to do good when you have more information.
+
+However, rather than make personal investments, we think it’s even better to invest in a community of people working to do good.
+
+Our sister charity, <a href="https://www.givingwhatwecan.org/">Giving What We Can</a>, is building a community of people who donate 10% of their income to whichever charities are most cost-effective. Every $1 invested in growing GWWC has led to <a href="https://www.givingwhatwecan.org/impact/">$6 already donated</a> to their top recommended charities, and a total of almost one billion dollars pledged.
+
+By building a community, they’ve been able to raise more money than their founders could have donated individually – they’ve achieved a *multiplier* on their impact.
+
+But what’s more, the members donate to whichever charities are most effective at the time. If the situation changes, then (at least to some extent) the donations will change too.
+
+This *flexibility* makes the impact *over time* much higher.
+
+Giving What We Can is one example of several projects in the <a href="https://80000hours.org/problem-profiles/promoting-effective-altruism/">effective altruism community</a>, a community of people who aim to identify the best ways to help others and take action.
+
+80,000 Hours itself is another example.
+
+Better career advice doesn’t sound like one of the most pressing problems imaginable. But many of the world’s most talented young people want to do good with their lives, and lack good advice on how to do so. This means that every year, thousands of them have far less impact than they could have.
+
+We could have gone to work on issues like AI ourselves. But instead, by providing better advice, we can help thousands of other people find high-impact careers. And so, we can have thousands of times as much impact ourselves.
+
+What’s more, if we discover new, better career options than the ones we already know about, we can switch to promoting them. Just like Giving What We Can, this flexibility gives us greater impact over time.
+
+We call the indirect strategies we’ve covered—global priorities research, broad interventions, and promoting effective altruism—“going meta”. This is because they work one level removed from the concrete problems that seem most urgent.
+
+The downside of going meta is that it’s harder to know if your efforts are effective. The advantage is they’re usually more neglected, since people prefer concrete opportunities over more abstract ones, and they allow you to have greater impact in the face of uncertainty.
+
+Find out more about <a href="/problem-profiles/promoting-effective-altruism/">promoting effective altruism</a>
+
+## How to work out which problems *you* should focus on
+
+You can see a list of almost all the problems we’ve covered here:
+
+<a href="/problem-profiles/" target="_blank" title="" class="btn btn-default">The list</a>
+
+We’ve scored the problems on scale, neglectedness and solvability to help make our reasoning clearer. You can read about how we came up with the scores <a href="/articles/problem-framework/">here</a>. Take the scores with a fist full of salt.
+
+The assessment of problems also greatly depends on value judgements and debatable empirical questions, so we expect people will disagree with our ranking. To help, we made a tool that asks you some key questions, then re-ranks the problems based on your answers.
+
+<a href="/problem-quiz" target="_blank" title="" class="btn btn-default">Use the tool</a>
+
+Finally, factor in personal fit. We don’t think everyone should work on the number one problem. If you’re a great fit for an area, you might have over 10 times as much impact as in one that doesn’t motivate you. So this could easily change your personal ranking.
+
+Just remember <a href="/career-guide/high-impact-jobs/">there are many ways</a> to help solve each problem, so it’s usually possible to find work you enjoy. Moreover, it’s <a href="/career-guide/job-satisfaction/#should-you-just-follow-your-passion">easier to develop new passions</a> than most people expect.
+
+Despite all the uncertainties, your choice of problem might be the single biggest decision in determining your impact.
+
+If we rated global problems in terms of how pressing they are, we might intuitively expect them to look like this:
+
+![Log-normal distribution of problems by effectiveness](https://cdn.80000hours.org/wp-content/uploads/2016/06/80K_gaussiangraph-01.png)[``]
+
+Some problems are more pressing than others, but most are pretty good.
+
+But instead, we’ve found that it looks more like this.
+
+![Gaussian distribution of problems by effectiveness]()[`https://cdn.80000hours.org/wp-content/uploads/2016/06/80K_paretograph-01.png`]
+
+Some problems are *far* higher-impact than others, because they can differ by 10 or 100 times in terms of how big, neglected and solvable they are, as well as your degree of personal fit.[^:`<p>Because the three factors multiply together, if each can vary by a factor of 100, the overall variation could be up to six orders of magnitude. In practice, the factors anti-correlate, so it’s not quite as large as this, and there are other reasons for modesty. We explain more <a href="/articles/problem-framework/#how-should-we-interpret-the-results/">here</a>. </p>
+<p>If you multiply together three normally distributed factors, then it will produce a distribution that's log-normal. Log-normal distributions have a fat tail, in which the top opportunities are far better than the median. Fat tailed distributions are also common in the real-world, especially as the outputs to complex systems e.g. income, city size, casualties in war, and earthquake size all follow very fat tailed distributions. So, there are theoretical grounds to expect the distribution of problems by effectiveness to have a fat tailed shape, in agreement with the estimates we made <a href="/articles/problem-framework/">using our rubric</a>.</p>
+<p>In one of the most measurable domains, global health, the distribution of interventions by effectiveness also empirically seems to be log-normal (as we show in this article with the DCP2 data), though note that this data is <em>ex post</em>, rather than <em>ex ante</em>, and we'd expect the <em>ex ante</em> distribution to be less skewed, due to regression to the mean and other effects.`] So getting this decision right could mean you achieve over 100 times as much with your career.
+
+If there’s one lesson we draw from all we’ve covered, it’s this: if you want to do good in the world, it’s worth really taking the time to learn about different global problems, and how you might contribute to them. It takes time, and there’s a lot to learn, but it’s hard to imagine anything more interesting, or more important.
+
+```
+    <div class="panel clearfix">
+        <h2><span id="apply-this-to-your-own-career" class="toc-anchor"></span>Apply this to your own career</h2>
+        <p>Using the resources above, write down the three global problems that you think are most pressing for you to work on. Your personal list will depend on your values, empirical assumptions, and personal fit with the areas.
+        <p>For each problem, list out some specific career options you could take that would help the problem. You can get ideas in <a href="/problem-profiles/">our profiles</a>, as well as further reading on each area. Also remember <a href="/career-guide/how-much-difference-can-one-person-make/">you can contribute to any problem area</a> through donations and advocacy, even if it’s not the focus of your day job.
+        <p>This list of problems is just a starting point. The next step is to find concrete career options that will make a difference within the area, which we cover in the next article, then to find an option with excellent personal fit, which we also cover <a href="/career-guide/personal-fit/">later</a>.
+    </div>
+    <div class="well bg-gray-lighter margin-bottom margin-top padding-top-small padding-bottom-small">
+        <h2 class="no_toc"><small>Part 6:</small>Which careers are highest impact?</h2>
+        <p><a href="/career-guide/high-impact-jobs/" class="btn btn-primary">CONTINUE &rarr;</a>
+        <p>If you&#8217;re new, <a href="/career-guide/">go to the start of the guide</a>.
+        <p>No time now? Join <a href="/newsletter/">our newsletter</a> and we’ll send you one article each week.
+    </div>
+```
+
+
