--- a/5.md
+++ b/5.md
@@ -452,7 +452,7 @@ Some problems are more pressing than others, but most are pretty good.
 
 But instead, we’ve found that it looks more like this.
 
-![Gaussian distribution of problems by effectiveness]()[`https://cdn.80000hours.org/wp-content/uploads/2016/06/80K_paretograph-01.png`]
+![Gaussian distribution of problems by effectiveness](https://cdn.80000hours.org/wp-content/uploads/2016/06/80K_paretograph-01.png)[``]
 
 Some problems are *far* higher-impact than others, because they can differ by 10 or 100 times in terms of how big, neglected and solvable they are, as well as your degree of personal fit.[^:`<p>Because the three factors multiply together, if each can vary by a factor of 100, the overall variation could be up to six orders of magnitude. In practice, the factors anti-correlate, so it’s not quite as large as this, and there are other reasons for modesty. We explain more <a href="/articles/problem-framework/#how-should-we-interpret-the-results/">here</a>. </p>
 <p>If you multiply together three normally distributed factors, then it will produce a distribution that's log-normal. Log-normal distributions have a fat tail, in which the top opportunities are far better than the median. Fat tailed distributions are also common in the real-world, especially as the outputs to complex systems e.g. income, city size, casualties in war, and earthquake size all follow very fat tailed distributions. So, there are theoretical grounds to expect the distribution of problems by effectiveness to have a fat tailed shape, in agreement with the estimates we made <a href="/articles/problem-framework/">using our rubric</a>.</p>
