--- a/5.md
+++ b/5.md
@@ -233,7 +233,7 @@ In 2006, The Guardian ordered segments of smallpox DNA via mail. If assembled in
 <p>  One study estimated that because most people on the planet have no resistance to the extinct virus, an initial release which infected just 10 people would spread to 2.2 million people in 180 days.
 </p></blockquote><p><a href="http://web.archive.org/web/20170227205221/https://www.theguardian.com/world/2006/jun/14/terrorism.topstories3">Archived link</a>, retrieved 27-Febuary-2017`]
 
-![envelope vial smallpox DNA](https://cdn.80000hours.org/wp-content/uploads/2017/03/smlpx4aa.gif)[`Image Credit: The Guardian`]
+![envelope vial smallpox DNA" style="width: 100%](https://cdn.80000hours.org/wp-content/uploads/2017/03/smlpx4aa.gif)[`Image Credit: The Guardian`]
 
 In the future, we can imagine diseases even deadlier than smallpox evolving or being created through bioengineering.
 
