--- a/6.md
+++ b/6.md
@@ -171,7 +171,7 @@ More broadly, there are lots of ways to earn more money, and we doubt all of the
 
 (To go into the ethics of earning to give in more depth, see <a href="https://www.academia.edu/1557895/Replaceability_Career_Choice_and_Making_a_Difference" target="_blank">this paper</a> we published.)
 
-### >What’s the best way to earn to give?
+### What’s the best way to earn to give?
 
 To learn about how to best earn to give – including recommendations of which jobs to take – see this article:
 
