--- a/-1.md
+++ b/-1.md
@@ -22,7 +22,7 @@
 
 
 
-Why should I read this guide? - 80,000 Hours test
+Why should I read this guide? - 80,000 Hours
 
 # Why should I read this guide?
 
