--- a/7.md
+++ b/7.md
@@ -418,7 +418,6 @@ The following are especially relevant to a certain area, but are also good gener
     </div>
 </div>
 <p style="margin: 0;">
-
 <script type="text/javascript">
         if (typeof boundAccordionListener === "undefined") {
             function showPanelIfAnchorInAccordion(anchorId) {
@@ -447,7 +446,6 @@ The following are especially relevant to a certain area, but are also good gener
         var boundAccordionListener = true;
     </script>
 ```
-
 
 Law and investment banking are also common options for career capital, and have similar characteristics to consulting. If you have relatively good verbal skills, law is likely to be the better fit. If you have relatively good social skills, then consider the “deal-making” positions in investment banking, such as mergers and acquisitions. If you have relatively good quantitative skills, then consider sales and trading or asset management in investment banking.
 
@@ -549,44 +547,30 @@ Any option that gives you a provable, useful, transferable skill can be a good m
                 We know lots of examples of people who started with no technology background, and within six months ended up with highly paid programming jobs they enjoy far more than their old jobs. Programming is also a growing, in-demand skill that can be used in many areas. Bootcamps are intensive, three-month programmes that aim to get you a job as soon as possible. They often have over 90% placement rates, and some are free unless you get a job. Read <a href="https://80000hours.org/2014/04/interview-with-buck-shlegeris-from-app-academy/">our interview with one of the top US bootcamps</a>, and <a href="https://80000hours.org/2014/12/learn-to-code-in-16-weeks-for-free-in-the-uk-at-founders-and-coders/">this interview with a free bootcamp in London.</a> Alternatively, you could teach yourself through many of the great free online courses, such as <a href="http://www.theodinproject.com/">the Odin Project</a>. For more about this skill, see our review of <a href="https://80000hours.org/career-reviews/software-engineering/">software engineering</a>.
             </div>
         </div>
-        
-
     </div>
     <div class="panel panel-default panel-collapse">
         <div class="panel-heading">
             <h4 class="panel-title"><a class="collapsed" data-toggle="collapse" data-target="#-13">Data science bootcamp</a></h4>
-            
-
         </div>
         <div id="-13" class="panel-body-collapse collapse" data-80k-event-label="Data science bootcamp">
             <div class="panel-body">
                 Data science is a cross between statistics and programming. The bootcamps are a similar deal to programming, although they tend to mainly recruit science PhDs. If you’ve just done a science PhD and don’t want to continue with academia, this is a good option to consider. For more, see our full review of <a href="https://80000hours.org/career-reviews/data-science/">data science</a>. Similarly you can learn data analysis, statistics and modeling by taking the right graduate programme, as discussed above.
-
             </div>
         </div>
-        
-
     </div>
     <div class="panel panel-default panel-collapse">
         <div class="panel-heading">
             <h4 class="panel-title"><a class="collapsed" data-toggle="collapse" data-target="#-14">Marketing and sales</a></h4>
-            
-
         </div>
         <div id="-14" class="panel-body-collapse collapse" data-80k-event-label="Marketing and sales">
             <div class="panel-body">
-                Learning to market toilet paper doesn’t seem like the most socially motivated option. But almost all types of organisation need marketing, and demand for the skill is growing. You can learn the skill-set, then transfer into an organisation with a social mission. Failing that, the skill has high market value, so you could earn to give instead.
-
+                Learning to market toilet paper doesn’t seem like the most socially motivated option. But almost all types of organisation need marketing, and demand for the skill is growing. You can learn the skill-set, then transfer into an organisation with a social mission. Failing that, the skill has high market value, so you could earn to give instead.</p>
                 Marketing skills can be learned by taking an entry level position at a top firm or working under a good mentor in a business. We’d especially recommend focusing on the more technology-driven marketing that’s sometimes called “growth hacking.” Read more in <a href="https://80000hours.org/career-reviews/work-in-marketing/">our career review of marketing</a>.
-
             </div>
         </div>
-        
-
     </div>
 </div>
 <p style="margin: 0;">
-    
 <script type="text/javascript">
         if (typeof boundAccordionListener === "undefined") {
             function showPanelIfAnchorInAccordion(anchorId) {
@@ -615,7 +599,6 @@ Any option that gives you a provable, useful, transferable skill can be a good m
         var boundAccordionListener = true;
     </script>
 ```
-
 
 We have more information on which skills are most useful and how to learn quickly in a <a href="/career-guide/how-to-be-successful/">later article</a>.
 
