--- a/7.md
+++ b/7.md
@@ -564,7 +564,7 @@ Any option that gives you a provable, useful, transferable skill can be a good m
         </div>
         <div id="-14" class="panel-body-collapse collapse" data-80k-event-label="Marketing and sales">
             <div class="panel-body">
-                Learning to market toilet paper doesn’t seem like the most socially motivated option. But almost all types of organisation need marketing, and demand for the skill is growing. You can learn the skill-set, then transfer into an organisation with a social mission. Failing that, the skill has high market value, so you could earn to give instead.</p>
+                <p>Learning to market toilet paper doesn’t seem like the most socially motivated option. But almost all types of organisation need marketing, and demand for the skill is growing. You can learn the skill-set, then transfer into an organisation with a social mission. Failing that, the skill has high market value, so you could earn to give instead.</p><p>
                 Marketing skills can be learned by taking an entry level position at a top firm or working under a good mentor in a business. We’d especially recommend focusing on the more technology-driven marketing that’s sometimes called “growth hacking.” Read more in <a href="https://80000hours.org/career-reviews/work-in-marketing/">our career review of marketing</a>.
             </div>
         </div>
