--- a/7.md
+++ b/7.md
@@ -24,7 +24,7 @@ Part 7:
 
 Which jobs put you in the best long-term position? - 80,000 Hours
 
-# Which jobs help people the&nbsp;most?
+# The two most common ways people accidentally sabotage their career early on
 
 By <span class="byline author vcard"><a href="https://80000hours.org/author/benjamin-todd/" rel="author" class="fn">Benjamin Todd</a></span> &middot; Last updated <time class="update" datetime="2017-04-24T00:00:00+00:00">April 2017</time>
 
