--- a/8.md
+++ b/8.md
@@ -372,7 +372,7 @@ During her PhD, she did an internship at a leading evidence-based policy think t
 At the end of her PhD, she can either continue in academia, or switch into policy or writing. She could also probably go back to finance or the non-profit sector. Most importantly, she’ll have a far better idea of which options are best.
 
 <div class="panel clearfix">
-    
+
 ## Apply this to your own career: how to explore
 
 1. Use the narrowing down process above to cut your options down to a shortlist of three to five.
@@ -395,10 +395,13 @@ Instead, go and try things. You’ll learn as you go, heading step-by-step towar
 
 Now, once you’ve chosen an area, how can you ensure you succeed? That’s what we cover in the next article. After that, we&#8217;ll show how to fit everything together into a <a href="https://80000hours.org/career-guide/career-planning/">career plan</a>.
 
+```
 <div class="well bg-gray-lighter margin-bottom margin-top padding-top-small padding-bottom-small">
     <h2 class="no_toc"><small>Part 9:</small>Evidence-based advice on how to succeed in any job</h2>
-    <a href="/career-guide/how-to-be-successful/" class="btn btn-primary">Continue &rarr;</a>
-    If you&#8217;re new, <a href="/career-guide/">go to the start of the guide.</a>
-    No time right now? Join <a href="/newsletter/">our newsletter</a> and we’ll send you one article each week.
+    <p><a href="/career-guide/how-to-be-successful/" class="btn btn-primary">Continue →</a></p>
+    <p>If you’re new, <a href="/career-guide/">go to the start of the guide.</a></p>
+    <p>No time right now? Join <a href="/newsletter/">our newsletter</a> and we’ll send you one article each week.</p>
 </div>
+``
+
 <strong><a href="https://www.youtube.com/watch?v=gV5OAfKhe34&amp;nohtml5=False" target="_blank">Take a break</a></strong>
